RESOLVED FIXED227722
Fix type error in testb3
https://bugs.webkit.org/show_bug.cgi?id=227722
Summary Fix type error in testb3
Yijia Huang
Reported 2021-07-06 14:30:47 PDT
...
Attachments
Patch (2.18 KB, patch)
2021-07-06 14:50 PDT, Yijia Huang
no flags
Patch (4.15 KB, patch)
2021-07-06 15:06 PDT, Yijia Huang
no flags
Yijia Huang
Comment 1 2021-07-06 14:50:29 PDT
Mark Lam
Comment 2 2021-07-06 14:54:48 PDT
Comment on attachment 432976 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=432976&action=review > Source/JavaScriptCore/b3/testb3_3.cpp:93 > Value* lsbValue = root->appendNew<Const32Value>(proc, Origin(), lsb); > - Value* amountValue = root->appendNew<Const64Value>(proc, Origin(), amount); > + Value* amountValue = root->appendNew<Const32Value>(proc, Origin(), amount); Why pass lab and amount in as int64_t then? Ditto for lsbs and widths vectors, why Vector<int64_t>?
Mark Lam
Comment 3 2021-07-06 14:55:50 PDT
(In reply to Mark Lam from comment #2) > Comment on attachment 432976 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=432976&action=review > > > Source/JavaScriptCore/b3/testb3_3.cpp:93 > > Value* lsbValue = root->appendNew<Const32Value>(proc, Origin(), lsb); > > - Value* amountValue = root->appendNew<Const64Value>(proc, Origin(), amount); > > + Value* amountValue = root->appendNew<Const32Value>(proc, Origin(), amount); > > Why pass lab and amount in as int64_t then? Ditto for lsbs and widths > vectors, why Vector<int64_t>? Can you fix these as well?
Yijia Huang
Comment 4 2021-07-06 15:06:28 PDT
EWS
Comment 5 2021-07-06 15:49:40 PDT
Committed r279627 (239445@main): <https://commits.webkit.org/239445@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 432980 [details].
Radar WebKit Bug Importer
Comment 6 2021-07-06 15:50:21 PDT
Note You need to log in before you can comment on or make changes to this bug.