Fix type error in testb3 https://bugs.webkit.org/show_bug.cgi?id=227722

Patch by Yijia Huang <yijia_huang@apple.com> on 2021-07-06
Reviewed by Mark Lam.

Fix type error in testb3. Shift amount should be 32-bit constant.

* b3/testb3_3.cpp:
(testInsertSignedBitfieldInZero64):
(testExtractSignedBitfield64):

Canonical link: https://commits.webkit.org/239445@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@279627 268f45cc-cd09-0410-ab3c-d52691b4dbfc